--- a/EmployeeProject.Repository/EmployeeProject.Repository.csproj
+++ b/EmployeeProject.Repository/EmployeeProject.Repository.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EmployeeManagement.Data\EmployeeProject.Data.csproj" />
     <ProjectReference Include="..\EmployeeProject.DataAccess\EmployeeProject.DataAccess.csproj" />
   </ItemGroup>
 
